@@ -9,9 +9,12 @@ fixed:
     wasn't a XiMpLe node
   - also fixed how rk.XML.convert() and rk.XML.switch() were handling
     modifier checking
+  - some fixes to the skeleton GUI and demo script
 added:
   - new methods plugin2script() to try to translate raw plugin XML into
     working rkwarddev script calls
+  - new option "ignore" enables rk.uniqueIDs() to not check nodes for
+    duplicates (e.g., <copy>)
 
 changes in version 0.07-3 (2015-06-29)
 fixed:
